styles.css
body {
margin: auto;


}



header {
    background-color: #1F2937;
    padding: 0 15% 0 15%;
      
}

.container {
    display: flex;
    padding-bottom: 75px; 
    
}

.text1 {


}

.text {
    max-width: 100px;
}


.header {
color: #F9FAF8 ;
font-size: 24px;
align-items: center;
display: flex;



}



header,a {
    color: #E5E7EB;

}

a{
    text-decoration: none;
    
}

ul {
    list-style: none;
    display: flex;
    
    
}

.headerlinks {
    display: flex;
    margin-left: auto;
    gap: 8px;
    
}

header img {
    margin-left: auto;
    
    width: 210px;
    height: auto;
}

h1 {
    font-size: 48px;
    font-weight: bolder;
}

body .container {
    display: flex;
    justify-content: center;

}

.infoheader {
    font-size: 36px;
    font-weight: bolder;
    color: #1F2937;
    display: flex;
    justify-content: center;


}


.imginfo {
    width: 75px;
    height: 75px;
    border-radius: 25% 10%;
    border: 3px solid #3882F6;
    
    
}

.info {
    text-align: center;
    padding: 10px;
   
}

.quote {
    background-color: #E5E7EB;
    display: flex;
    justify-content: center;
    padding: 0 15% 0 15%;
    
}

.quotecontainer {
    display: flex;
    flex-direction: column;

}

.quote p {
    font-size: 36px;
    font-style: italic;
    color: #1F2937;
}

.quotee {
    font-weight: bold;
    margin-left: auto;
}

